# track-manager

./: .gitignore  CHANGELOG.md  JUNK_PATTERNS.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  TODO.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: ci.yml  test.yml  unit-tests.yml
docs/: JUNK_PATTERNS.md  cli-consistency-changes.md  cli-style-guide.md  download-process.md  track-quality.md
tests/: test_duplicates.py  test_rate_limiter.py  test_spotify_duplicates.py
tests/fixtures/: template.m4a
tests/integration/: README.md  conftest.py  test_cli_integration.py  test_download_workflow.py  test_duplicate_detection.py  test_error_handling.py  test_metadata_workflow.py  test_metadata_workflow.py.bak
tests/unit/: test_config_reader.py  test_track_metadata.py
track_manager/: __init__.py  __main__.py  cli.py  config.py  dabmusic.py  downloader.py  duplicates.py  metadata.py  provenance.py  quality.py  rate_limiter.py  songlink.py
track_manager/sources/: __init__.py  base.py  direct.py  soundcloud.py  spotify.py  youtube.py
